linked 2 shiny apps on Project html page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,7 @@ website:
         text: Portfolio
       - href: assignments.qmd
         text: Assignments
-      - href: https://abiburns.shinyapps.io/DARTschedule/
+      - href: project.qmd
         text: Project
       
 format:
