--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,7 @@ project:
   output-dir: docs
 
 website:
+  open-graph: true
   title: "abiburns.github.io"
   navbar:
     left:
@@ -18,6 +19,7 @@ website:
         text: Database Project
       - href: dvz project.qmd
         text: Data Visualization Project
+  
       
 format:
   html:
