--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         text: Database Project
       - href: dvz project.qmd
         text: Data Visualization Project
+      - href: assignments.qmd
+        text: KM Assignments
 
 body-footer:
   To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
